--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 
             </h3>
-        <h3><a href="linkedin.com/in/youssefelharizi" style="color: #ffffff;text-decoration: none;color: red;">LinkedIn</a></h3>
+        <h3><a href="https://linkedin.com/in/youssefelharizi" style="color: #ffffff;text-decoration: none;color: red;">LinkedIn</a></h3>
         <img src="youssef.png" class="image">
         <br><br><br><br>
         <div>
